# Template-Repo_Env

./: README.md  README_copy.md  config.yml  environment.yml  init.py  requirements.txt  setup.cfg  setup_copy.cfg
.github/workflows/: test.yml
tests/: test.yml
utils/: config.yml  init.py  init_repo.py  install_instructions.md  instructions_python.md  links.yml
utils/markdown/: instructions_python_copy.md
utils/ressources/: instructions_fiji.md  instructions_python.md  overview.md  test.yml
