[metadata]
name = {{ repo_name }}
version = 0.1
author = Benoit Dehapiot
author_email = b.dehapiot@gmail.com
description = {{ repo_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BDehapiot/{{ repo_name }}
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
exclude = tests*
python_requires = >={{ python_version }}
install_requires = {{ dependencies }}